# segal-tasks

./: .gitignore
cw-term7/: .gitignore  cw.cabal  shell.nix  stack.yaml
cw-term7/src/: Calc.hs  Main.hs  Solve-Vector.hs  Solve.hs  Tridiagonal.hs  Types.hs
fdm/: fdm.cabal  shell.nix  stack.yaml
fdm/src/: Main.hs  Solve.hs  Tridiagonal.hs
math1/: .gitignore  .stylish-haskell.yaml  math1.cabal  stack.yaml
math1/src/: Cond.hs  ConjGradient.hs  Gauss.hs  Glade.hs  Iterative.hs  Main.hs  Relax.hs  Types.hs
ode/: .gitignore  EasyPlot.hs  Solve.hs  default.nix  ode.cabal  shell.nix  stack.yaml
ode/src/: EasyPlot.hs  Main.hs  Solve.hs
