name:                cw
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable show
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types
  build-depends:       base
                     , bytestring
                     , cairo
                     , cereal
                     , cereal-vector
                     , criterion
                     , deepseq
                     , directory
                     , extra
                     , gtk
                     , lens
                     , mtl
                     , random
                     , transformers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
                       -w
  default-extensions:  MultiWayIf
                     , RecordWildCards
                     , UnicodeSyntax
                     , LambdaCase

executable calc
  hs-source-dirs:      src
  main-is:             Calc.hs
  other-modules:       Types, Solve, Tridiagonal
  build-depends:       base
                     , bytestring
                     , cairo
                     , cereal
                     , cereal-vector
                     , criterion
                     , deepseq
                     , directory
                     , extra
                     , gtk
                     , lens
                     , mtl
                     , random
                     , transformers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
                       -w
  default-extensions:  MultiWayIf
                     , RecordWildCards
                     , UnicodeSyntax
                     , LambdaCase