name:                fdm
version:             0.1.0.0
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable fdm
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Solve, Tridiagonal
  build-depends:       base
                     , Chart
                     , Chart-cairo
                     , Chart-gtk
                     , gtk
                     , vector
                     , lens
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  MultiWayIf
                     , RecordWildCards
